# catalyst

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  USAGE.md
.beads/: config.yaml  metadata.json  routes.jsonl
.beads/formulas/: .installed.json
.beads/hooks/: post-checkout
catalyst-cli/: Cargo.toml
catalyst-cli/src/: config.rs  main.rs
catalyst-core/: Cargo.toml
catalyst-core/src/: agent.rs  context.rs  event.rs  lib.rs  project.rs  session.rs
catalyst-llm/: Cargo.toml
catalyst-llm/src/: anthropic.rs  client.rs  lib.rs  openrouter.rs  provider.rs  types.rs
catalyst-tools/: Cargo.toml
catalyst-tools/src/: context.rs  lib.rs  registry.rs  tools.rs
catalyst-tools/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  list.rs  mod.rs  read.rs  write.rs
catalyst-tui/: Cargo.toml
catalyst-tui/src/: app.rs  command.rs  lib.rs  theme.rs  ui.rs
e2e/: .gitignore  boot.test.ts  commands.test.ts  input-mode.test.ts  package-lock.json  package.json  tui-test.config.ts
e2e/__snapshots__/: boot.test.ts.snap  commands.test.ts.snap  input-mode.test.ts.snap
research/: 00-overview.md  01-language-comparison.md  02-tui-frameworks.md  03-llm-integration.md  04-tool-system.md  05-event-architecture.md  06-tla-integration.md  07-simulation-engine.md  08-async-runtime.md  09-error-handling.md  10-serialization.md  11-logging-observability.md  12-testing-framework.md  13-terminal-handling.md  14-configuration-management.md  15-security.md  16-performance.md  17-ai-coding-agent-landscape.md  18-cli-development.md
