[package]
name = "catalyst-llm"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream = "0.1"
futures.workspace = true
futures-util = "0.3"
bytes = "1"
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
